[gd_scene load_steps=14 format=3 uid="uid://c3dxvf2x81wwt"]

[ext_resource type="Script" uid="uid://h5gvvejyycn7" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="Script" path="res://pause_menu.gd" id="2_m6e0p"]
[ext_resource type="Script" path="res://quit_button.gd" id="3_27fn8"]
[ext_resource type="Texture2D" uid="uid://d4lasqjwyn2xn" path="res://assets/quit_test.png" id="3_nltto"]
[ext_resource type="Texture2D" uid="uid://c5kahe2avqb5h" path="res://assets/quit_hover_test.png" id="4_ibotj"]
[ext_resource type="PackedScene" uid="uid://22f118a2rwec" path="res://audio_control.tscn" id="7_y4yjw"]
[ext_resource type="Texture2D" uid="uid://1vlx4jojkgpo" path="res://assets/continue_test.png" id="8_irxef"]
[ext_resource type="Script" path="res://continue_button.gd" id="8_ok7cu"]
[ext_resource type="Script" path="res://music_player.gd" id="8_waa4j"]
[ext_resource type="Texture2D" uid="uid://bl7pjkctxytcw" path="res://assets/continue_hover_test.png" id="9_e2l4f"]
[ext_resource type="Script" uid="uid://bftp35jn4256y" path="res://retry_button.gd" id="11_e2l4f"]

[sub_resource type="LabelSettings" id="LabelSettings_n5ude"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_y4yjw"]
font_size = 43
font_color = Color(0, 0, 0, 1)

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_fyqef")

[node name="pause_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_m6e0p")

[node name="quit_button" type="TextureButton" parent="pause_menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("3_nltto")
texture_hover = ExtResource("4_ibotj")
script = ExtResource("3_27fn8")

[node name="teeth_counter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 128.0
offset_right = 143.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="teeth_counter"]
layout_mode = 0
offset_left = 196.0
offset_right = 287.0
offset_bottom = 53.0
text = "0"
label_settings = SubResource("LabelSettings_n5ude")

[node name="Label2" type="Label" parent="teeth_counter"]
layout_mode = 0
offset_left = -23.0
offset_top = 2.0
offset_right = 113.0
offset_bottom = 55.0
text = "Teeth "
label_settings = SubResource("LabelSettings_n5ude")

[node name="audio_control" parent="." instance=ExtResource("7_y4yjw")]
volume_db = -14.312

[node name="music_player" type="AudioStreamPlayer" parent="."]
volume_db = -27.67
script = ExtResource("8_waa4j")

[node name="end_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="end_menu"]
layout_mode = 0
offset_left = 139.0
offset_top = 39.0
offset_right = 902.0
offset_bottom = 594.0
color = Color(1, 1, 0, 1)

[node name="ColorRect" type="ColorRect" parent="end_menu/ColorRect"]
layout_mode = 0
offset_left = 47.0
offset_top = 47.0
offset_right = 703.0
offset_bottom = 489.0

[node name="quit_button" type="TextureButton" parent="end_menu"]
layout_mode = 0
offset_left = 688.0
offset_top = 445.0
offset_right = 816.0
offset_bottom = 509.0
texture_normal = ExtResource("3_nltto")
texture_hover = ExtResource("4_ibotj")
script = ExtResource("3_27fn8")

[node name="continue_button" type="TextureButton" parent="end_menu"]
layout_mode = 0
offset_left = 234.0
offset_top = 443.0
offset_right = 362.0
offset_bottom = 507.0
texture_normal = ExtResource("8_irxef")
texture_hover = ExtResource("9_e2l4f")
script = ExtResource("8_ok7cu")

[node name="Label" type="Label" parent="end_menu"]
layout_mode = 0
offset_left = 205.0
offset_top = 124.0
offset_right = 831.0
offset_bottom = 241.0
text = "You Win! The Teeth are all 
your's for your Tooth castle"
label_settings = SubResource("LabelSettings_y4yjw")
horizontal_alignment = 1

[node name="game_over_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="game_over_menu"]
layout_mode = 0
offset_left = 139.0
offset_top = 39.0
offset_right = 902.0
offset_bottom = 594.0
color = Color(1, 1, 0, 1)

[node name="ColorRect" type="ColorRect" parent="game_over_menu/ColorRect"]
layout_mode = 0
offset_left = 47.0
offset_top = 47.0
offset_right = 703.0
offset_bottom = 489.0

[node name="quit_button" type="TextureButton" parent="game_over_menu"]
layout_mode = 0
offset_left = 688.0
offset_top = 445.0
offset_right = 816.0
offset_bottom = 509.0
texture_normal = ExtResource("3_nltto")
texture_hover = ExtResource("4_ibotj")
script = ExtResource("3_27fn8")

[node name="retry_button" type="TextureButton" parent="game_over_menu"]
layout_mode = 0
offset_left = 234.0
offset_top = 443.0
offset_right = 362.0
offset_bottom = 507.0
texture_normal = ExtResource("8_irxef")
texture_hover = ExtResource("9_e2l4f")
script = ExtResource("11_e2l4f")

[node name="Label" type="Label" parent="game_over_menu"]
layout_mode = 0
offset_left = 205.0
offset_top = 124.0
offset_right = 831.0
offset_bottom = 241.0
text = "You got caught!"
label_settings = SubResource("LabelSettings_y4yjw")
horizontal_alignment = 1
